[package]
name = "firey-brot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "firey-brot"


[lib]
name = "mandelbrot"
path = "src/mandelbrot.rs"

[dependencies]
arrayfire = "3.8.0"
image = "0.23.14"
acacia = "0.2.0"
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"